[package]
name = "overviewer-ng"
version = "0.1.0"
authors = ["Andrew Chin <achin@eminence32.net>"]
description = "A tool to render Minecraft worlds"

[dependencies]
liboverviewer = {path = "liboverviewer"}
nbtrs = {git = "https://github.com/overviewer/nbtrs"}
rio = {git="https://github.com/overviewer/rio", version="^0.1.2"}
image = "0.6"


[[bin]]
name = "overviewer"
path = "src/main.rs"

[[bin]]
name = "height_map"
path = "src/height_map.rs"
